prevent textAngular default input visible(only in webkit)

--- a/app/styles/bootstrap_overwrite.less
+++ b/app/styles/bootstrap_overwrite.less
@@ -95,3 +95,7 @@
 .table-responsive {
   overflow-x: inherit;
 }
+//隐藏textAngular在webkit下默认生成的input
+#textAngular-editableFix-010203040506070809 {
+  display: none;
+}
